--- a/A.html
+++ b/A.html
@@ -1,4 +1,10 @@
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <style>
+      color : red;
+    </style>
+  </head>
+  <body>
+    <h1>lorem5</h1>
+  </body>
 </html>
